[[whats-new]]
= What's New
:page-section-summary-toc: 1

[[changes-in-3-2-since-3-1]]
== Changes in 3.2 Since 3.1

[[spring-framework-6-2]]
=== Spring Framework 6.1

This version requires Spring Framework 6.2.