@@ -1,5 +1,5 @@
 /*
- * Copyright 2016-2019 the original author or authors.
+ * Copyright 2016-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,12 +16,6 @@
 
 package org.springframework.amqp.core;
 
-import java.util.Arrays;
-import java.util.Map;
-
-import org.springframework.util.Assert;
-import org.springframework.util.ObjectUtils;
-
 /**
  * Builder providing a fluent API for building {@link Exchange}s.
  *
@@ -29,27 +23,8 @@ import org.springframework.util.ObjectUtils;
  * @author Artem Bilan
  *
  * @since 1.6
- *
  */
-public final class ExchangeBuilder extends AbstractBuilder {
-
-	private final String name;
-
-	private final String type;
-
-	private boolean durable = true;
-
-	private boolean autoDelete;
-
-	private boolean internal;
-
-	private boolean delayed;
-
-	private boolean ignoreDeclarationExceptions;
-
-	private boolean declare = true;
-
-	private Object[] declaringAdmins;
+public class ExchangeBuilder extends BaseExchangeBuilder<ExchangeBuilder> {
 
 	/**
 	 * Construct an instance of the appropriate type.
@@ -59,8 +34,7 @@ public final class ExchangeBuilder extends AbstractBuilder {
 	 * @see ExchangeTypes
 	 */
 	public ExchangeBuilder(String name, String type) {
-		this.name = name;
-		this.type = type;
+		super(name, type);
 	}
 
 	/**
@@ -100,126 +74,49 @@ public final class ExchangeBuilder extends AbstractBuilder {
 	}
 
 	/**
-	 * Set the auto delete flag.
+	 * Return an {@code x-consistent-hash} exchange builder.
+	 * @param name the name.
 	 * @return the builder.
+	 * @since 3.2
 	 */
-	public ExchangeBuilder autoDelete() {
-		this.autoDelete = true;
-		return this;
+	public static ConsistentHashExchangeBuilder consistentHashExchange(String name) {
+		return new ConsistentHashExchangeBuilder(name);
 	}
 
 	/**
-	 * Set the durable flag.
-	 * @param isDurable the durable flag (default true).
-	 * @return the builder.
+	 * An {@link ExchangeBuilder} extension for the {@link ConsistentHashExchange}.
+	 *
+	 * @since 3.2
 	 */
-	public ExchangeBuilder durable(boolean isDurable) {
-		this.durable = isDurable;
-		return this;
-	}
+	public static final class ConsistentHashExchangeBuilder extends BaseExchangeBuilder<ConsistentHashExchangeBuilder> {
 
-	/**
-	 * Add an argument.
-	 * @param key the argument key.
-	 * @param value the argument value.
-	 * @return the builder.
-	 */
-	public ExchangeBuilder withArgument(String key, Object value) {
-		getOrCreateArguments().put(key, value);
-		return this;
-	}
-
-	/**
-	 * Add the arguments.
-	 * @param arguments the arguments map.
-	 * @return the builder.
-	 */
-	public ExchangeBuilder withArguments(Map<String, Object> arguments) {
-		this.getOrCreateArguments().putAll(arguments);
-		return this;
-	}
-
-	public ExchangeBuilder alternate(String exchange) {
-		return withArgument("alternate-exchange", exchange);
-	}
-
-	/**
-	 * Set the internal flag.
-	 * @return the builder.
-	 */
-	public ExchangeBuilder internal() {
-		this.internal = true;
-		return this;
-	}
-
-	/**
-	 * Set the delayed flag.
-	 * @return the builder.
-	 */
-	public ExchangeBuilder delayed() {
-		this.delayed = true;
-		return this;
-	}
-
-	/**
-	 * Switch on ignore exceptions such as mismatched properties when declaring.
-	 * @return the builder.
-	 * @since 2.0
-	 */
-	public ExchangeBuilder ignoreDeclarationExceptions() {
-		this.ignoreDeclarationExceptions = true;
-		return this;
-	}
-
-	/**
-	 * Switch to disable declaration of the exchange by any admin.
-	 * @return the builder.
-	 * @since 2.1
-	 */
-	public ExchangeBuilder suppressDeclaration() {
-		this.declare = false;
-		return this;
-	}
-
-	/**
-	 * Admin instances, or admin bean names that should declare this exchange.
-	 * @param admins the admins.
-	 * @return the builder.
-	 * @since 2.1
-	 */
-	public ExchangeBuilder admins(Object... admins) {
-		Assert.notNull(admins, "'admins' cannot be null");
-		Assert.noNullElements(admins, "'admins' can't have null elements");
-		this.declaringAdmins = Arrays.copyOf(admins, admins.length);
-		return this;
-	}
-
-	@SuppressWarnings("unchecked")
-	public <T extends Exchange> T build() {
-		AbstractExchange exchange;
-		if (ExchangeTypes.DIRECT.equals(this.type)) {
-			exchange = new DirectExchange(this.name, this.durable, this.autoDelete, getArguments());
+		/**
+		 * Construct an instance of the builder for {@link ConsistentHashExchange}.
+		 *
+		 * @param name the exchange name
+		 * @see ExchangeTypes
+		 */
+		public ConsistentHashExchangeBuilder(String name) {
+			super(name, ExchangeTypes.CONSISTENT_HASH);
 		}
-		else if (ExchangeTypes.TOPIC.equals(this.type)) {
-			exchange = new TopicExchange(this.name, this.durable, this.autoDelete, getArguments());
+
+		public ConsistentHashExchangeBuilder hashHeader(String headerName) {
+			withArgument("hash-header", headerName);
+			return this;
 		}
-		else if (ExchangeTypes.FANOUT.equals(this.type)) {
-			exchange = new FanoutExchange(this.name, this.durable, this.autoDelete, getArguments());
+
+		public ConsistentHashExchangeBuilder hashProperty(String propertyName) {
+			withArgument("hash-property", propertyName);
+			return this;
 		}
-		else if (ExchangeTypes.HEADERS.equals(this.type)) {
-			exchange = new HeadersExchange(this.name, this.durable, this.autoDelete, getArguments());
+
+		@Override
+		@SuppressWarnings("unchecked")
+		public ConsistentHashExchange build() {
+			return configureExchange(
+					new ConsistentHashExchange(this.name, this.durable, this.autoDelete, getArguments()));
 		}
-		else {
-			exchange = new CustomExchange(this.name, this.type, this.durable, this.autoDelete, getArguments());
-		}
-		exchange.setInternal(this.internal);
-		exchange.setDelayed(this.delayed);
-		exchange.setIgnoreDeclarationExceptions(this.ignoreDeclarationExceptions);
-		exchange.setShouldDeclare(this.declare);
-		if (!ObjectUtils.isEmpty(this.declaringAdmins)) {
-			exchange.setAdminsThatShouldDeclare(this.declaringAdmins);
-		}
-		return (T) exchange;
+
 	}
 
 }
