@@ -87,7 +87,13 @@ The behavior varies across these `Exchange` types in terms of how they handle bi
 For example, a `Direct` exchange lets a queue be bound by a fixed routing key (often the queue's name).
 A `Topic` exchange supports bindings with routing patterns that may include the '*' and '#' wildcards for 'exactly-one' and 'zero-or-more', respectively.
 The `Fanout` exchange publishes to all queues that are bound to it without taking any routing key into consideration.
-For much more information about these and the other Exchange types, see xref:index.adoc#resources[Other Resources].
+For much more information about these and the other Exchange types, see https://www.rabbitmq.com/tutorials/amqp-concepts#exchanges[AMQP Exchanges].
+
+Starting with version 3.2, the `ConsistentHashExchange` type has been introduced for convenience during application configuration phase.
+It provided options like `x-consistent-hash` for an exchange type.
+Allows to configure `hash-header` or `hash-property` exchange definition argument.
+The respective RabbitMQ `rabbitmq_consistent_hash_exchange` plugin has to be enabled on the broker.
+More information about the purpose, logic and behavior of the Consistent Hash Exchange are in the official RabbitMQ https://github.com/rabbitmq/rabbitmq-server/tree/main/deps/rabbitmq_consistent_hash_exchange[documentation].
 
 NOTE: The AMQP specification also requires that any broker provide a "`default`" direct exchange that has no name.
 All queues that are declared are bound to that default `Exchange` with their names as routing keys.
