@@ -1,13 +1,13 @@
 [[changes-in-3-1-since-3-0]]
-== Changes in 3.1 Since 3.0
+= Changes in 3.1 Since 3.0
 
 [[java-17-spring-framework-6-1]]
-=== Java 17, Spring Framework 6.1
+== Java 17, Spring Framework 6.1
 
 This version requires Spring Framework 6.1 and Java 17.
 
 [[x31-exc]]
-=== Exclusive Consumer Logging
+== Exclusive Consumer Logging
 
 Log messages reporting access refusal due to exclusive consumers are now logged at DEBUG level by default.
 It remains possible to configure your own logging behavior by setting the `exclusiveConsumerExceptionLogger` and `closeExceptionLogger` properties on the listener container and connection factory respectively.
@@ -16,7 +16,7 @@ A new method `logRestart()` has been added to the `ConditionalExceptionLogger` t
 See xref:amqp/receiving-messages/consumer-events.adoc[Consumer Events] and xref:amqp/connections.adoc#channel-close-logging[Logging Channel Close Events] for more information.
 
 [[x31-conn-backoff]]
-=== Connections Enhancement
+== Connections Enhancement
 
 Connection Factory supported backoff policy when creating connection channel.
 See xref:amqp/connections.adoc[Choosing a Connection Factory] for more information.
