@@ -12,7 +12,3 @@ We also provide support for message-driven POJOs.
 These libraries facilitate management of AMQP resources while promoting the use of dependency injection and declarative configuration.
 In all of these cases, you can see similarities to the JMS support in the Spring Framework.
 For other project-related information, visit the Spring AMQP project https://projects.spring.io/spring-amqp/[homepage].
-
-(C) 2010 - 2023
-
-Copies of this document may be made for your own use and for distribution to others, provided that you do not charge any fee for such copies and further provided that each copy contains this Copyright Notice, whether distributed in print or electronically.
